# templator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-tests.yml
include/templator/: avl_tree.h  command_tokenizer.h  definitions.h  error.h  instructions.h  logical_operations.h  parser.h  template.h  templator.h  value.h  variable_comparisons.h  variables.h
include/templator/instructions/: conditional_insert_text_instruction.h  insert_conditional_subtemplate.h  insert_text_instruction.h  insert_variable_instruction.h
src/: avl_tree.c  command_tokenizer.c  error.c  instructions.c  logical_operations.c  parser.c  template.c  templator.c  variable_comparisons.c  variables.c
src/instructions/: conditional_insert_text_instruction.c  insert_conditional_subtemplate.c  insert_text_instruction.c  insert_variable_instruction.c
test/: CMakeLists.txt  test_avl_implementation.cpp  test_basics.c  test_command_tokenization.cpp  test_if_statements.cpp  test_templating.cpp
